syntax = "proto3";

option go_package = "github.com/sonm-io/core/proto;sonm";

package sonm;

service QOS {
    rpc SetAlias(QOSSetAliasRequest) returns (QOSSetAliasResponse) {}
    rpc AddHTBShaping(QOSAddHTBShapingRequest) returns (QOSAddHTBShapingResponse) {}
    rpc RemoveHTBShaping(QOSRemoveHTBShapingRequest) returns (QOSRemoveHTBShapingResponse) {}
    // Flush completely resets
    rpc Flush(QOSFlushRequest) returns (QOSFlushResponse) {}
}

message QOSSetAliasRequest {
    string linkName = 1;
    string linkAlias = 2;
}

message QOSSetAliasResponse {}

message QOSAddHTBShapingRequest {
    string linkName = 1;
    string linkAlias = 2;
    uint64 rateLimitEgress = 3;
    uint64 rateLimitIngress = 4;
}

message QOSAddHTBShapingResponse {}

message QOSRemoveHTBShapingRequest {
    string linkName = 1;
}

message QOSRemoveHTBShapingResponse {}

message QOSFlushRequest {}

message QOSFlushResponse {}
